MODBULKOPS-229 - Improve logic to process changed getSortedIds response